<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/b0c4de"
    android:id="@+id/main"
    android:padding="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dane_pracownika"
        android:textStyle="bold"
        android:textSize="22sp" />

    <EditText
        android:id="@+id/etFirstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/imie" />

    <EditText
        android:id="@+id/etLastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nazwisko" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stanowisko"
            android:textStyle="bold"
            android:textSize="15sp"
            android:layout_marginEnd="10dp"/>

        <Spinner
            android:id="@+id/spinnerPosition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/generowanie_hasla"
        android:textStyle="bold"
        android:textSize="22sp"
        android:layout_marginTop="20dp"/>

    <EditText
        android:id="@+id/etPasswordLength"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ile_znakow"
        android:inputType="number" />

    <CheckBox
        android:id="@+id/cbUpperLower"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/male_i_wielkie_litery"
        android:checked="true" />

    <CheckBox
        android:id="@+id/cbDigits"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cyfry" />

    <CheckBox
        android:id="@+id/cbSpecial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/znaki_specjalne" />

    <Button
        android:id="@+id/btnGenerate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/generuj_haslo"
        android:backgroundTint="@color/_4682b4"
        android:textColor="@color/white"
        android:layout_gravity="end"
        android:layout_marginTop="10dp"/>

    <Button
        android:id="@+id/btnConfirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/zatwierdz"
        android:backgroundTint="@color/_4682b4"
        android:textColor="@color/white"
        android:layout_marginTop="10dp"/>

</LinearLayout>